DTGB-748: Added fix for alignment of logos and text.

--- a/components/31-molecules/partner-block/_partner-block.scss
+++ b/components/31-molecules/partner-block/_partner-block.scss
@@ -8,8 +8,13 @@
     padding: 2rem 5.5rem;
   }
 
+  p {
+    text-align: center;
+  }
+
   .partners ul.inline {
     display: flex;
+    align-items: center;
     justify-content: space-around;
     margin-top: 2.2rem;
 
